added a little of style
added new font-family and a bit of styling is done,
most of your project is done and good luck

--- a/src/index.html
+++ b/src/index.html
@@ -69,13 +69,13 @@
                                 <li><a class="dropdown-item" href="studies/btech-electronics-and-communication-engg">EC</a></li>
                                 <div class="dropdown-divider"></div>
                                 <li>
-                                    <h2 class="dropdown-header">M.Tech</h2>
+                                    <h2 class="dropdown-header" style = "color : blue; font-family : arial; font-size : 4px;">M.Tech</h2>
                                 </li>
-                                <li><a class="dropdown-item" href="studies/mtech-thermal-engg.html">Thermal</a></li>
+                                <li><a class="dropdown-item" href="studies/mtech-thermal-engg.html" style = "color : blue; font-family : arial; font-size : 4px;">Thermal</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Gallery</a>
+                            <a class="nav-link" href="#" style = "color : blue; font-family : arial; font-size : 4px;">Gallery</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="about" id="navbarDropdownMenuLink" data-toggle="dropdown"
@@ -83,8 +83,8 @@
                                 Life@CEA
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">First</a></li>
-                                <li><a class="dropdown-item" href="#">Second</a></li>
+                                <li><a class="dropdown-item" href="#" style = "color : blue; font-family : arial; font-size : 4px;">First</a></li>
+                                <li><a class="dropdown-item" href="#" style = "color : blue; font-family : arial; font-size : 4px;">Second</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
